--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
     <h1>Darwin</h1>
+    <h1>web develoment certus </h1> 
+<h2>los mejores diseños y desarrollos de paginas web del perugg</h2>
+<p>el mejor lugar donde para aprender desarrollar web </p>
 </body>
+
 
 </html>
